--- a/Roomie/Roomie/Base.lproj/Main.storyboard
+++ b/Roomie/Roomie/Base.lproj/Main.storyboard
@@ -123,7 +123,7 @@
         <!--Group List View Controller-->
         <scene sceneID="p4Y-qX-avr">
             <objects>
-                <viewController id="5Qn-nf-YjP" customClass="GroupListViewController" customModule="Roomie" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="GroupListViewController" id="5Qn-nf-YjP" customClass="GroupListViewController" customModule="Roomie" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="zjp-TU-5Qf"/>
                         <viewControllerLayoutGuide type="bottom" id="pX2-Ed-heV"/>
@@ -203,7 +203,7 @@
                                 <connections>
                                     <action selector="joinGroupButtonTapped:" destination="5Qn-nf-YjP" eventType="touchUpInside" id="eWy-4d-xcq"/>
                                     <action selector="signUpButtonTapped:" destination="LzG-Cr-yRb" eventType="touchUpInside" id="fhj-X9-wyQ"/>
-                                    <segue destination="XOg-o4-6ic" kind="show" id="wxQ-MQ-y5L"/>
+                                    <segue destination="XOg-o4-6ic" kind="presentation" id="liX-qw-bqg"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -537,14 +537,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BigGroupIcon" translatesAutoresizingMaskIntoConstraints="NO" id="9gi-Py-ePi">
-                                <rect key="frame" x="110" y="72" width="155" height="155"/>
+                                <rect key="frame" x="110" y="28" width="155" height="155"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="155" id="8vr-YS-YD4"/>
                                     <constraint firstAttribute="height" constant="155" id="eCc-9p-JwK"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter Group Code" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RTx-J3-LqZ">
-                                <rect key="frame" x="119" y="247" width="138" height="21"/>
+                                <rect key="frame" x="119" y="203" width="138" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="OVq-Zr-lr5"/>
                                     <constraint firstAttribute="height" constant="21" id="a4y-4p-bfz"/>
@@ -554,7 +554,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="6 DIgit Code" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1Dy-6p-TqJ">
-                                <rect key="frame" x="136.5" y="276" width="102" height="30"/>
+                                <rect key="frame" x="136.5" y="232" width="102" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="hKh-Y8-rYh"/>
                                 </constraints>
@@ -562,6 +562,22 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZJo-Ec-eAW">
+                                <rect key="frame" x="273" y="232" width="30" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Join"/>
+                                <connections>
+                                    <action selector="joinButtonTapped:" destination="XOg-o4-6ic" eventType="touchUpInside" id="3Hm-xE-stR"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0A9-S0-bcL">
+                                <rect key="frame" x="64" y="232" width="48" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Cancel"/>
+                                <connections>
+                                    <action selector="cancelButtonTapped:" destination="XOg-o4-6ic" eventType="touchUpInside" id="Oed-ns-CfM"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -578,11 +594,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Join Group" id="dkM-tw-yUS">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="LwZ-p9-77B">
-                            <connections>
-                                <action selector="joinGroupButtonTapped:" destination="XOg-o4-6ic" id="7zH-VD-1Zd"/>
-                            </connections>
-                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="LwZ-p9-77B"/>
                     </navigationItem>
                     <connections>
                         <outlet property="passcodeTextfield" destination="1Dy-6p-TqJ" id="RGp-3k-Auc"/>
